fix spacing

--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ body {
   background-color: #e3bd32;
 }
 
+p{
+  padding-right: 10%;
+  padding-left: 10%;
+}
 h1,
 h2,
 h3 {
@@ -83,17 +87,20 @@ a:hover {
 }
 
 .cover {
-  width: 30%;
-  display: inline-block;
-  margin-left: 35%;
-  margin-bottom: 10%;
+  width: 20%;
+  display:inline-flex;
+  margin-left: 15%;
+  margin-right: 12%;
+  margin-top: 60px;
+  margin-bottom: 60px;
   transition: 0.2s;
+  align-self: center;
+  flex-direction: row;
 }
 
 .cover:hover {
-  width: 32%;
-  margin-left: 34%;
-  margin-bottom: 8%;
+  width: 21%;
+  margin-left: 14%;
 }
 
 @media (max-width: 550px) {
